--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -95,40 +95,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>437497</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1064.48</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>TALCO BARUEL PO 100GR ORIGINAL</td>\n",
+       "      <td>2358.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2358.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>444365</td>\n",
        "      <td>4</td>\n",
        "      <td>1875.62</td>\n",
        "      <td>53.0</td>\n",
        "      <td>SUCO NUTRINECTAR PRONTO 200ML UVA</td>\n",
-       "      <td>525.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>-512.0</td>\n",
+       "      <td>1981.0</td>\n",
+       "      <td>1723.0</td>\n",
+       "      <td>-258.0</td>\n",
        "      <td>2025-09-09</td>\n",
        "      <td>Produto na camara-fria</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>464141</td>\n",
        "      <td>3</td>\n",
        "      <td>5224.50</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>254.0</td>\n",
+       "      <td>237.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>-242.0</td>\n",
+       "      <td>-225.0</td>\n",
        "      <td>2025-09-10</td>\n",
        "      <td>validade filial</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>471762</td>\n",
        "      <td>3</td>\n",
        "      <td>729.22</td>\n",
        "      <td>22.0</td>\n",
        "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>2071.0</td>\n",
+       "      <td>1944.0</td>\n",
        "      <td>20.0</td>\n",
-       "      <td>-2051.0</td>\n",
+       "      <td>-1924.0</td>\n",
        "      <td>NaT</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -138,19 +151,22 @@
       ],
       "text/plain": [
        "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "0  444365          4      1875.62        53.0   \n",
-       "1  464141          3      5224.50        90.0   \n",
-       "2  471762          3       729.22        22.0   \n",
+       "0  437497          5      1064.48       130.0   \n",
+       "1  444365          4      1875.62        53.0   \n",
+       "2  464141          3      5224.50        90.0   \n",
+       "3  471762          3       729.22        22.0   \n",
        "\n",
        "                               Descrição   Estoque  BLOQUEADO     var  \\\n",
-       "0       SUCO NUTRINECTAR PRONTO 200ML UVA    525.0       13.0  -512.0   \n",
-       "1                 CREME LEITE TIROL 200GR    254.0       12.0  -242.0   \n",
-       "2  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   2071.0       20.0 -2051.0   \n",
+       "0          TALCO BARUEL PO 100GR ORIGINAL   2358.0        0.0 -2358.0   \n",
+       "1       SUCO NUTRINECTAR PRONTO 200ML UVA   1981.0     1723.0  -258.0   \n",
+       "2                 CREME LEITE TIROL 200GR    237.0       12.0  -225.0   \n",
+       "3  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   1944.0       20.0 -1924.0   \n",
        "\n",
        "        DATA                   RETURN  \n",
-       "0 2025-09-09  Produto na camara-fria   \n",
-       "1 2025-09-10          validade filial  \n",
-       "2        NaT                           "
+       "0        NaT                           \n",
+       "1 2025-09-09  Produto na camara-fria   \n",
+       "2 2025-09-10          validade filial  \n",
+       "3        NaT                           "
       ]
      },
      "metadata": {},
@@ -180,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -215,30 +231,66 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14126</th>\n",
-       "      <td>2025-09-05</td>\n",
-       "      <td>11:31:00</td>\n",
-       "      <td>464141</td>\n",
-       "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
+       "      <th>14366</th>\n",
+       "      <td>2025-09-15</td>\n",
+       "      <td>11:08:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>PRODUTO AVARIADO</td>\n",
        "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14094</th>\n",
-       "      <td>2025-09-04</td>\n",
-       "      <td>10:36:00</td>\n",
-       "      <td>464141</td>\n",
-       "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
+       "      <th>14360</th>\n",
+       "      <td>2025-09-13</td>\n",
+       "      <td>04:02:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14358</th>\n",
+       "      <td>2025-09-13</td>\n",
+       "      <td>00:28:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14316</th>\n",
+       "      <td>2025-09-12</td>\n",
+       "      <td>16:55:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
        "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14027</th>\n",
-       "      <td>2025-09-01</td>\n",
-       "      <td>09:13:00</td>\n",
-       "      <td>464141</td>\n",
-       "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
+       "      <th>14328</th>\n",
+       "      <td>2025-09-12</td>\n",
+       "      <td>16:13:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14320</th>\n",
+       "      <td>2025-09-12</td>\n",
+       "      <td>15:18:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14315</th>\n",
+       "      <td>2025-09-12</td>\n",
+       "      <td>14:56:00</td>\n",
+       "      <td>471762</td>\n",
+       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
        "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -246,15 +298,23 @@
        "</div>"
       ],
       "text/plain": [
-       "            DATA     HORAS     COD                DESCRIÇÃO  \\\n",
-       "14126 2025-09-05  11:31:00  464141  CREME LEITE TIROL 200GR   \n",
-       "14094 2025-09-04  10:36:00  464141  CREME LEITE TIROL 200GR   \n",
-       "14027 2025-09-01  09:13:00  464141  CREME LEITE TIROL 200GR   \n",
+       "            DATA     HORAS     COD                               DESCRIÇÃO  \\\n",
+       "14366 2025-09-15  11:08:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14360 2025-09-13  04:02:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14358 2025-09-13  00:28:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14316 2025-09-12  16:55:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14328 2025-09-12  16:13:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14320 2025-09-12  15:18:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "14315 2025-09-12  14:56:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
        "\n",
-       "                                 MOTIVO                           FUNCIONARIO  \n",
-       "14126  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14094  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14027  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
+       "                          MOTIVO                           FUNCIONARIO  \n",
+       "14366           PRODUTO AVARIADO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14360  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
+       "14358  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
+       "14316  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14328  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14320  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14315  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
       ]
      },
      "metadata": {},
@@ -364,7 +424,7 @@
    ],
    "source": [
     "\n",
-    "comp = df_67.loc[df_67['COD'] == 464141]\n",
+    "comp = df_67.loc[df_67['COD'] == 471762]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
     "display(comp)\n",
     "display(df_retorno)\n"
