--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
-    "caminho = r'c:\\WS_OLIVEIRA\\OUTPUT\\BI_ACESSO\\FATO_GERAL.xlsx'"
+    "caminho = ar_xlsx.ar_96"
    ]
   },
   {
@@ -22,205 +22,80 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESC</th>\n",
-       "      <th>EMB</th>\n",
-       "      <th>OBS2</th>\n",
-       "      <th>QTUNITCX</th>\n",
-       "      <th>QTTOTPAL</th>\n",
-       "      <th>RUA</th>\n",
-       "      <th>PREDIO</th>\n",
-       "      <th>APTO</th>\n",
-       "      <th>TIPO</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Estoque</th>\n",
-       "      <th>CUSTO_ULT</th>\n",
-       "      <th>MOVI</th>\n",
-       "      <th>CLASSE</th>\n",
-       "      <th>PL_SUG</th>\n",
-       "      <th>PL_CAP</th>\n",
-       "      <th>CONTAGEM</th>\n",
-       "      <th>STATUS_PROD</th>\n",
-       "      <th>CUSTO_TT</th>\n",
-       "      <th>PRODUTO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>440218</td>\n",
-       "      <td>ENERG EXTRA POWER PET 2LT</td>\n",
-       "      <td>PT/0006/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>80</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>101</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>677</td>\n",
-       "      <td>51.41</td>\n",
-       "      <td>32525</td>\n",
-       "      <td>A</td>\n",
-       "      <td>8.55</td>\n",
-       "      <td>2.50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>INT</td>\n",
-       "      <td>34804.57</td>\n",
-       "      <td>440218</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>466231</td>\n",
-       "      <td>MARGARINA DELICIA 250G CREM 77% LIP</td>\n",
-       "      <td>CX/0024/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>101</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3450</td>\n",
-       "      <td>72.44</td>\n",
-       "      <td>24012</td>\n",
-       "      <td>A</td>\n",
-       "      <td>6.32</td>\n",
-       "      <td>2.02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>INT</td>\n",
-       "      <td>249918.00</td>\n",
-       "      <td>466231</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>470168</td>\n",
-       "      <td>AZEITONA VDE FATIADA RAINHA BALDE 1,8KG</td>\n",
-       "      <td>BD/0001/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>150</td>\n",
-       "      <td>9</td>\n",
-       "      <td>26</td>\n",
-       "      <td>102</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3616</td>\n",
-       "      <td>37.06</td>\n",
-       "      <td>18268</td>\n",
-       "      <td>A</td>\n",
-       "      <td>3.78</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>INT</td>\n",
-       "      <td>134008.96</td>\n",
-       "      <td>470168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>473680</td>\n",
-       "      <td>SACHET MAIONESE CEPERA 7GR</td>\n",
-       "      <td>CX/0140/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>560</td>\n",
-       "      <td>6</td>\n",
-       "      <td>95</td>\n",
-       "      <td>102</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3031</td>\n",
-       "      <td>15.79</td>\n",
-       "      <td>17265</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>4</td>\n",
-       "      <td>DIV</td>\n",
-       "      <td>47859.49</td>\n",
-       "      <td>473680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>466230</td>\n",
-       "      <td>MARGARINA DELICIA 500G CREM 77% LIP</td>\n",
-       "      <td>CX/0012/UN</td>\n",
-       "      <td>Ativos</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>101</td>\n",
-       "      <td>INTEIRO(1,90)</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8819</td>\n",
-       "      <td>65.50</td>\n",
-       "      <td>37643</td>\n",
-       "      <td>A</td>\n",
-       "      <td>9.11</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>INT</td>\n",
-       "      <td>577644.50</td>\n",
-       "      <td>466230</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      COD                                     DESC         EMB    OBS2  \\\n",
-       "0  440218                ENERG EXTRA POWER PET 2LT  PT/0006/UN  Ativos   \n",
-       "1  466231      MARGARINA DELICIA 250G CREM 77% LIP  CX/0024/UN  Ativos   \n",
-       "2  470168  AZEITONA VDE FATIADA RAINHA BALDE 1,8KG  BD/0001/UN  Ativos   \n",
-       "3  473680               SACHET MAIONESE CEPERA 7GR  CX/0140/UN  Ativos   \n",
-       "4  466230      MARGARINA DELICIA 500G CREM 77% LIP  CX/0012/UN  Ativos   \n",
-       "\n",
-       "   QTUNITCX  QTTOTPAL  RUA  PREDIO  APTO           TIPO  ...  Estoque  \\\n",
-       "0         1        80    8       5   101  INTEIRO(1,90)  ...      677   \n",
-       "1         1       112    3      20   101  INTEIRO(1,90)  ...     3450   \n",
-       "2         1       150    9      26   102  INTEIRO(1,90)  ...     3616   \n",
-       "3         1       560    6      95   102  INTEIRO(1,90)  ...     3031   \n",
-       "4         1       112    3       4   101  INTEIRO(1,90)  ...     8819   \n",
-       "\n",
-       "   CUSTO_ULT   MOVI  CLASSE  PL_SUG  PL_CAP  CONTAGEM  STATUS_PROD   CUSTO_TT  \\\n",
-       "0      51.41  32525       A    8.55    2.50         1          INT   34804.57   \n",
-       "1      72.44  24012       A    6.32    2.02         1          INT  249918.00   \n",
-       "2      37.06  18268       A    3.78    1.20         2          INT  134008.96   \n",
-       "3      15.79  17265       A    0.85    0.20         4          DIV   47859.49   \n",
-       "4      65.50  37643       A    9.11    6.00         1          INT  577644.50   \n",
-       "\n",
-       "   PRODUTO  \n",
-       "0   440218  \n",
-       "1   466231  \n",
-       "2   470168  \n",
-       "3   473680  \n",
-       "4   466230  \n",
-       "\n",
-       "[5 rows x 27 columns]"
+       "CODFILIAL              int64\n",
+       "CODPROD                int64\n",
+       "DESCRICAO             object\n",
+       "OBS2                  object\n",
+       "CODAUXILIAR2         float64\n",
+       "CODAUXILIAR          float64\n",
+       "EMBALAGEM             object\n",
+       "EMBALAGEMMASTER       object\n",
+       "QTUNITCX               int64\n",
+       "CODSEC                 int64\n",
+       "SECAO                 object\n",
+       "LASTROPAL              int64\n",
+       "ALTURAPAL              int64\n",
+       "QTTOTPAL               int64\n",
+       "ALTURAM3             float64\n",
+       "LARGURAM3            float64\n",
+       "COMPRIMENTOM3        float64\n",
+       "ALTURAARM            float64\n",
+       "LARGURAARM           float64\n",
+       "COMPRIMENTOARM       float64\n",
+       "PESOBRUTOMASTER      float64\n",
+       "PESOLIQMASTER        float64\n",
+       "PESOBRUTO            float64\n",
+       "PESOLIQ              float64\n",
+       "CAPACIDADE             int64\n",
+       "ABASTECEPALETE        object\n",
+       "USAWMS                object\n",
+       "REVENDA               object\n",
+       "TIPOPROD             float64\n",
+       "CODFORNEC              int64\n",
+       "FORNECEDOR            object\n",
+       "TIPO                  object\n",
+       "PONTOREPOSICAO         int64\n",
+       "RUA                    int64\n",
+       "PREDIO                 int64\n",
+       "NIVEL                  int64\n",
+       "APTO                   int64\n",
+       "PKESTRU               object\n",
+       "PK_END                object\n",
+       "CARACTERISTICA        object\n",
+       "PULMAO                object\n",
+       "TIPO_1                object\n",
+       "PRAZOVAL             float64\n",
+       "PERCTOLERANCIAVAL    float64\n",
+       "DTULTENT              object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CODFILIAL', 'CODPROD', 'DESCRICAO', 'OBS2', 'CODAUXILIAR2',\n",
+       "       'CODAUXILIAR', 'EMBALAGEM', 'EMBALAGEMMASTER', 'QTUNITCX', 'CODSEC',\n",
+       "       'SECAO', 'LASTROPAL', 'ALTURAPAL', 'QTTOTPAL', 'ALTURAM3', 'LARGURAM3',\n",
+       "       'COMPRIMENTOM3', 'ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM',\n",
+       "       'PESOBRUTOMASTER', 'PESOLIQMASTER', 'PESOBRUTO', 'PESOLIQ',\n",
+       "       'CAPACIDADE', 'ABASTECEPALETE', 'USAWMS', 'REVENDA', 'TIPOPROD',\n",
+       "       'CODFORNEC', 'FORNECEDOR', 'TIPO', 'PONTOREPOSICAO', 'RUA', 'PREDIO',\n",
+       "       'NIVEL', 'APTO', 'PKESTRU', 'PK_END', 'CARACTERISTICA', 'PULMAO',\n",
+       "       'TIPO_1', 'PRAZOVAL', 'PERCTOLERANCIAVAL', 'DTULTENT'],\n",
+       "      dtype='object')"
       ]
      },
      "metadata": {},
@@ -229,7 +104,8 @@
    ],
    "source": [
     "df = pd.read_excel(caminho)\n",
-    "display(df.head())"
+    "display(df.dtypes)\n",
+    "display(df.columns)"
    ]
   }
  ],
