Criação do etl cadastro

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -2,23 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "44118fba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from path_arquivos import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import os\n",
-    "caminho = ar_xlsx.ar_96"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "623793b7",
    "metadata": {},
    "outputs": [
     {
@@ -28,56 +13,63 @@
       "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "from path_arquivos import *\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n",
+    "base = pd.read_excel(ar_xlsx.ar_96, usecols=['CODPROD', 'DESCRICAO'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "623793b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = base.loc[base['RUA'].between(1,39)].copy()\n",
+    "dic_raname = {\n",
+    "    'ABASTECEPALETE' : 'FLEG_ABST',\n",
+    "    'CAPACIDADE' : 'CAP'\n",
+    "}\n",
+    "df = df.rename(columns=dic_raname)\n",
+    "concat = df['RUA'].astype(str) + \" - \" + df['PREDIO'].astype(str)\n",
+    "\n",
+    "df['extrator'] = df['EMBALAGEMMASTER'].str.extract(r'(\\d+)').astype(int)\n",
+    "df['volume_master'] = df['ALTURAARM'].astype(float) * df['LARGURAARM'].astype(float) * df['COMPRIMENTOARM'].astype(float) \n",
+    "df['volume_venda'] = (df['ALTURAM3'].astype(float) * df['LARGURAM3'].astype(float) * df['COMPRIMENTOM3'].astype(float)) * df['extrator']\n",
+    "df['CONT_AP'] = concat.map(concat.value_counts())\n",
+    "df['STATUS_PROD'] = np.where(df['CONT_AP'] > 3, \"DIV\", \n",
+    "    np.where(df['CONT_AP'] > 2,\"VAL\", \"INT\"))\n",
+    "\n",
+    "df[\"VAR_CAP\"] = np.where((df['CAP'] > df['QTTOTPAL']) & (df['STATUS_PROD'] != \"INT\"), \"DIVERGENCIA\", \"NORMAL\")\n",
+    "df['VAR_ABST'] =    np.where((df['FLEG_ABST'] == 'SIM') & (df['STATUS_PROD'] == \"INT\"), \"NORMAL\",\n",
+    "                    np.where((df['FLEG_ABST']== 'NÃO') & (df['STATUS_PROD'] == \"DIV\"), \"NORMAL\",\n",
+    "                    \"DIVERGENCIA\"))\n",
+    "\n",
+    "df['VAR_CUBAGEM'] = np.where(df['volume_master'] < df['volume_venda'], \"DIVERGENCIA\", \"NORMAL\")\n",
+    "\n",
+    "drop_col = ['PKESTRU', 'PK_END', 'CARACTERISTICA', 'PULMAO','TIPO_1', 'PRAZOVAL', 'PERCTOLERANCIAVAL', 'DTULTENT','USAWMS', 'REVENDA', 'TIPOPROD','CODFORNEC', 'FORNECEDOR', 'TIPO', 'PONTOREPOSICAO','CODAUXILIAR', 'EMBALAGEM', 'EMBALAGEMMASTER', 'QTUNITCX', 'CODSEC','SECAO', 'LASTROPAL', 'ALTURAPAL', 'QTTOTPAL', 'ALTURAM3', 'LARGURAM3','COMPRIMENTOM3', 'ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM','PESOBRUTOMASTER', 'PESOLIQMASTER', 'PESOBRUTO', 'PESOLIQ','OBS2', 'CODAUXILIAR2','volume_venda', 'volume_master','CODFILIAL']\n",
+    "df = df.drop(columns=drop_col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bcd06b57",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "CODFILIAL              int64\n",
-       "CODPROD                int64\n",
-       "DESCRICAO             object\n",
-       "OBS2                  object\n",
-       "CODAUXILIAR2         float64\n",
-       "CODAUXILIAR          float64\n",
-       "EMBALAGEM             object\n",
-       "EMBALAGEMMASTER       object\n",
-       "QTUNITCX               int64\n",
-       "CODSEC                 int64\n",
-       "SECAO                 object\n",
-       "LASTROPAL              int64\n",
-       "ALTURAPAL              int64\n",
-       "QTTOTPAL               int64\n",
-       "ALTURAM3             float64\n",
-       "LARGURAM3            float64\n",
-       "COMPRIMENTOM3        float64\n",
-       "ALTURAARM            float64\n",
-       "LARGURAARM           float64\n",
-       "COMPRIMENTOARM       float64\n",
-       "PESOBRUTOMASTER      float64\n",
-       "PESOLIQMASTER        float64\n",
-       "PESOBRUTO            float64\n",
-       "PESOLIQ              float64\n",
-       "CAPACIDADE             int64\n",
-       "ABASTECEPALETE        object\n",
-       "USAWMS                object\n",
-       "REVENDA               object\n",
-       "TIPOPROD             float64\n",
-       "CODFORNEC              int64\n",
-       "FORNECEDOR            object\n",
-       "TIPO                  object\n",
-       "PONTOREPOSICAO         int64\n",
-       "RUA                    int64\n",
-       "PREDIO                 int64\n",
-       "NIVEL                  int64\n",
-       "APTO                   int64\n",
-       "PKESTRU               object\n",
-       "PK_END                object\n",
-       "CARACTERISTICA        object\n",
-       "PULMAO                object\n",
-       "TIPO_1                object\n",
-       "PRAZOVAL             float64\n",
-       "PERCTOLERANCIAVAL    float64\n",
-       "DTULTENT              object\n",
-       "dtype: object"
+       "Index(['CODFILIAL', 'CODPROD', 'DESCRICAO', 'CAP', 'FLEG_ABST', 'RUA',\n",
+       "       'PREDIO', 'NIVEL', 'APTO', 'extrator', 'CONT_AP', 'STATUS_PROD',\n",
+       "       'VAR_CAP', 'VAR_ABST', 'VAR_CUBAGEM'],\n",
+       "      dtype='object')"
       ]
      },
      "metadata": {},
@@ -85,17 +77,48 @@
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VAR_CUBAGEM</th>\n",
+       "      <th>TT_PROD</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DIVERGENCIA</td>\n",
+       "      <td>4320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>5641</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['CODFILIAL', 'CODPROD', 'DESCRICAO', 'OBS2', 'CODAUXILIAR2',\n",
-       "       'CODAUXILIAR', 'EMBALAGEM', 'EMBALAGEMMASTER', 'QTUNITCX', 'CODSEC',\n",
-       "       'SECAO', 'LASTROPAL', 'ALTURAPAL', 'QTTOTPAL', 'ALTURAM3', 'LARGURAM3',\n",
-       "       'COMPRIMENTOM3', 'ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM',\n",
-       "       'PESOBRUTOMASTER', 'PESOLIQMASTER', 'PESOBRUTO', 'PESOLIQ',\n",
-       "       'CAPACIDADE', 'ABASTECEPALETE', 'USAWMS', 'REVENDA', 'TIPOPROD',\n",
-       "       'CODFORNEC', 'FORNECEDOR', 'TIPO', 'PONTOREPOSICAO', 'RUA', 'PREDIO',\n",
-       "       'NIVEL', 'APTO', 'PKESTRU', 'PK_END', 'CARACTERISTICA', 'PULMAO',\n",
-       "       'TIPO_1', 'PRAZOVAL', 'PERCTOLERANCIAVAL', 'DTULTENT'],\n",
-       "      dtype='object')"
+       "   VAR_CUBAGEM  TT_PROD\n",
+       "0  DIVERGENCIA     4320\n",
+       "1       NORMAL     5641"
       ]
      },
      "metadata": {},
@@ -103,9 +126,20 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(caminho)\n",
-    "display(df.dtypes)\n",
-    "display(df.columns)"
+    "\n",
+    "var_cap = df.groupby(\"VAR_CAP\").agg(\n",
+    "            TT_PROD = ('CODPROD', 'nunique')\n",
+    "        ).reset_index()\n",
+    "\n",
+    "var_abst = df.groupby(\"VAR_ABST\").agg(\n",
+    "            TT_PROD = ('CODPROD', 'nunique')\n",
+    "        ).reset_index()\n",
+    "\n",
+    "var_cubagem = df.groupby(\"VAR_CUBAGEM\").agg(\n",
+    "            TT_PROD = ('CODPROD', 'nunique')\n",
+    "        ).reset_index()\n",
+    "display(df.columns)\n",
+    "display(var_cubagem)\n"
    ]
   }
  ],
